--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
    <div id="container"></div>
+   <h1> Quotes from the masters</h1>
+   <h2> Artists</h2>
+   <h3> — Susan Kare</h3>
+   <h3> — Salvador Dalí </h3>
+   <h3> — Frida Kahlo</h3>
+   <h2> Engineers</h2>
+   <h3> — Linus Torvalds </h3>
+   <h3> — Tim Berners-Lee </h3>
+   <h3> — Håkon Wium Lie </h3>
+   <h2> Bookstore </h2>
+   <h2> Typography </h2>
+   <h3> — Matthew Carter </h3>
+   <h3> — Neville Brody </h3>
+   <h3> — Jan Tschichold </h3>
+   <h2> Designers</h2>
+   <h3> — David Carson </h3>
+   <h2> Art</h2>
+   <h3> — Jean-Michel Basquiat</h3>
 </body>
 </html>
