add blockquote for Tim Berners-Lee

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
    <h3> — Tim Berners-Lee </h3>
+   <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
+         You affect the world by what you browse.
+   </blockquote>
    <h3> — Håkon Wium Lie </h3>
    <h2> Bookstore </h2>
    <h2> Typography </h2>
