add blockquote for Susan Kare

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
    <h1> Quotes from the masters</h1>
    <h2> Artists</h2>
    <h3> — Susan Kare</h3>
+   <blockquote cite= "http://www.azquotes.com/author/53746-Susan_Kare">
+   And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.”
+   </blockquote>
    <h3> — Salvador Dalí </h3>
    <h3> — Frida Kahlo</h3>
    <h2> Engineers</h2>
