add blockquote for Salvador Dali

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
    And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.”
    </blockquote>
    <h3> — Salvador Dalí </h3>
+   <blockquote cite= "https://www.brainyquote.com/authors/salvador_dali">
+      Intelligence without ambition is a bird without wings.
+   </blockquote>
    <h3> — Frida Kahlo</h3>
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
