--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h2> Artists</h2>
    <h3> — Susan Kare</h3>
    <blockquote cite= "http://www.azquotes.com/author/53746-Susan_Kare">
-   And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.”
+   And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.
    </blockquote>
    <h3> — Salvador Dalí </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/salvador_dali">
@@ -21,7 +21,7 @@
    <h3> — Linus Torvalds </h3>
    <h3> — Tim Berners-Lee </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
-         You affect the world by what you browse.
+      You affect the world by what you browse.
    </blockquote>
    <h3> — Håkon Wium Lie </h3>
    <h2> Bookstore </h2>
