--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       Intelligence without ambition is a bird without wings.
    </blockquote>
    <h3> — Frida Kahlo</h3>
+   <blockquote cite= "https://www.brainyquote.com/authors/frida_kahlo">
+      I never paint dreams or nightmares. I paint my own reality.
+   </blockquote>
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
    <h3> — Tim Berners-Lee </h3>
