add blockquote element for Linus Travlds

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
    </blockquote>
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
+   <blockquote cite= "https://www.brainyquote.com/search_results?q=Linus+Torvalds">
+      Intelligence is the ability to avoid doing work, yet getting the work done.
+   </blockquote>
    <h3> — Tim Berners-Lee </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
       You affect the world by what you browse.
