added blockquote element for Hakon Wium Lie

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       You affect the world by what you browse.
    </blockquote>
    <h3> — Håkon Wium Lie </h3>
+   <blockquote cite= "https://twitter.com/wiumlie">
+   I've been sued for publishing legal documents! Almost like @CERN in 1994 when #CSS was created. Public access to public documents is worth fighting for!
+   </blockquote>
    <h2> Bookstore </h2>
    <h2> Typography </h2>
    <h3> — Matthew Carter </h3>
