added blockquote element for Neville Brody

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
    <h2> Typography </h2>
    <h3> — Matthew Carter </h3>
    <h3> — Neville Brody </h3>
+   <blockquote cite= "http://www.azquotes.com/author/40514-Neville_Brody">
+   Design is more than just a few tricks to the eye. It's a few tricks to the brain.
+   </blockquote>
+
    <h3> — Jan Tschichold </h3>
    <h2> Designers</h2>
    <h3> — David Carson </h3>
