--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
    </blockquote>
    <h2> Designers</h2>
    <h3> — David Carson </h3>
+   <blockquote cite= "https://www.brainyquote.com/authors/david_carson">
+   The aim of every typographic work - the delivery of a message in the shortest, most efficient manner.
+   </blockquote>
    <h2> Art</h2>
    <h3> — Jean-Michel Basquiat</h3>
 </body>
