--- a/index.html
+++ b/index.html
@@ -53,5 +53,8 @@
    </blockquote>
    <h2> Art</h2>
    <h3> — Jean-Michel Basquiat</h3>
+   <blockquote cite= "https://www.brainyquote.com/authors/jeanmichel_basquiat">
+      I'm not a real person. I'm a legend.
+   </blockquote>
 </body>
 </html>
