edited blockquote element for David Carson

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <h2> Designers</h2>
    <h3> — David Carson </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/david_carson">
-   The aim of every typographic work - the delivery of a message in the shortest, most efficient manner.
+   Overall, people are reading less.
    </blockquote>
    <h2> Art</h2>
    <h3> — Jean-Michel Basquiat</h3>
