add image of Susan Kare

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
    <blockquote cite= "http://www.azquotes.com/author/53746-Susan_Kare">
    And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.
    </blockquote>
+   <img src="img/susan-kare.jpeg" width="200" alt="[image of Susan Kare]">
+
    <h3> — Salvador Dalí </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/salvador_dali">
       Intelligence without ambition is a bird without wings.
