add image of salvador dali

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
    <blockquote cite= "https://www.brainyquote.com/authors/salvador_dali">
       Intelligence without ambition is a bird without wings.
    </blockquote>
+   <img src="img/salvador-dali.jpg" width="200" alt="[image of Salvador Dali">
+
    <h3> — Frida Kahlo</h3>
    <blockquote cite= "https://www.brainyquote.com/authors/frida_kahlo">
       I never paint dreams or nightmares. I paint my own reality.
