add image of Frida Kahlo

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       Intelligence without ambition is a bird without wings.
    </blockquote>
    <img src="img/salvador-dali.jpg" width="200" alt="[image of Salvador Dali">
-
    <h3> — Frida Kahlo</h3>
    <blockquote cite= "https://www.brainyquote.com/authors/frida_kahlo">
       I never paint dreams or nightmares. I paint my own reality.
    </blockquote>
+   <img src="img/frida-kahlo.jpeg" width="200" alt="[image of Frida Kahlo">
+
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
    <blockquote cite= "https://www.brainyquote.com/search_results?q=Linus+Torvalds">
