add image of Linus Torvalds

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
    <blockquote cite= "https://www.brainyquote.com/search_results?q=Linus+Torvalds">
       Intelligence is the ability to avoid doing work, yet getting the work done.
    </blockquote>
+   <img src="img/linus-torvalds.jpeg" width="200" alt="[image of Linus Torvalds">
+
    <h3> — Tim Berners-Lee </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
       You affect the world by what you browse.
