add image of Tim Berners-Lee

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
    <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
       You affect the world by what you browse.
    </blockquote>
+   <img src="img/tim-berners-lee.jpg" width="200" alt="[image of Tim Berners-Lee">
+
    <h3> — Håkon Wium Lie </h3>
    <blockquote cite= "https://twitter.com/wiumlie">
    I've been sued for publishing legal documents! Almost like @CERN in 1994 when #CSS was created. Public access to public documents is worth fighting for!
