--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
    <blockquote cite= "https://twitter.com/wiumlie">
    I've been sued for publishing legal documents! Almost like @CERN in 1994 when #CSS was created. Public access to public documents is worth fighting for!
    </blockquote>
+   <img src="img/hakon-wium-lie.jpeg" width="200" alt="[image of Hakon-wium Lie">
    <h2> Typography </h2>
    <h3> — Matthew Carter </h3>
    <blockquote cite= "https://quotesondesign.com/matthew-carter/">
