add image of Matthew Carter

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
    <blockquote cite= "https://quotesondesign.com/matthew-carter/">
    Type is a beautiful group of letters, not a group of beautiful letters.
    </blockquote>
+   <img src="img/matthew-carter.jpeg" width="200" alt="[image of Matthew Carter">
    <h3> — Neville Brody </h3>
    <blockquote cite= "http://www.azquotes.com/author/40514-Neville_Brody">
    Design is more than just a few tricks to the eye. It's a few tricks to the brain.
