add image of Jan Tschichold

--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
    <blockquote cite= "http://www.azquotes.com/author/40514-Neville_Brody">
    Design is more than just a few tricks to the eye. It's a few tricks to the brain.
    </blockquote>
+   <img src="img/neville-brody.jpeg" width="200" alt="[image of Neville Brody">
    <h3> — Jan Tschichold </h3>
    <blockquote cite= "http://www.azquotes.com/author/40524-Jan_Tschichold">
    The aim of every typographic work - the delivery of a message in the shortest, most efficient manner.
    </blockquote>
+      <img src="img/jan-tschichold.jpeg" width="200" alt="[image of Jan Tschichold">
    <h2> Designers</h2>
    <h3> — David Carson </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/david_carson">
