added image of David Carson

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
    <blockquote cite= "https://www.brainyquote.com/authors/david_carson">
    Overall, people are reading less.
    </blockquote>
+   <img src="img/david-carson.jpeg" width="200" alt="[image of David Carson">
    <h2> Art</h2>
    <h3> — Jean-Michel Basquiat</h3>
    <blockquote cite= "https://www.brainyquote.com/authors/jeanmichel_basquiat">
