--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
    <blockquote cite= "https://www.brainyquote.com/authors/jeanmichel_basquiat">
       I'm not a real person. I'm a legend.
    </blockquote>
+   <img src="img/jean-michel-basquiat.jpeg" width="200" alt="[image of Jeanmichel Basquiat">
 </body>
 </html>
