--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <blockquote cite= "http://www.azquotes.com/author/53746-Susan_Kare">
    And with it all, good design's not about what medium you're working in, it's about thinking hard about what you want to do and what you have to work with before you start.
    </blockquote>
-   <img src="img/susan-kare.jpeg" width="200" alt="[image of Susan Kare]">
+   <img src="img/susan-kare.jpg" width="200" alt="[image of Susan Kare]">
 
    <h3> — Salvador Dalí </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/salvador_dali">
@@ -23,14 +23,14 @@
    <blockquote cite= "https://www.brainyquote.com/authors/frida_kahlo">
       I never paint dreams or nightmares. I paint my own reality.
    </blockquote>
-   <img src="img/frida-kahlo.jpeg" width="200" alt="[image of Frida Kahlo">
+   <img src="img/frida-kahlo.jpg" width="200" alt="[image of Frida Kahlo">
 
    <h2> Engineers</h2>
    <h3> — Linus Torvalds </h3>
    <blockquote cite= "https://www.brainyquote.com/search_results?q=Linus+Torvalds">
       Intelligence is the ability to avoid doing work, yet getting the work done.
    </blockquote>
-   <img src="img/linus-torvalds.jpeg" width="200" alt="[image of Linus Torvalds">
+   <img src="img/linus-torvalds.jpg" width="200" alt="[image of Linus Torvalds">
 
    <h3> — Tim Berners-Lee </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/tim_bernerslee">
@@ -42,34 +42,34 @@
    <blockquote cite= "https://twitter.com/wiumlie">
    I've been sued for publishing legal documents! Almost like @CERN in 1994 when #CSS was created. Public access to public documents is worth fighting for!
    </blockquote>
-   <img src="img/hakon-wium-lie.jpeg" width="200" alt="[image of Hakon-wium Lie">
+   <img src="img/hakon-wium-lie.jpg" width="200" alt="[image of Hakon-wium Lie">
    <h2> Typography </h2>
    <h3> — Matthew Carter </h3>
    <blockquote cite= "https://quotesondesign.com/matthew-carter/">
    Type is a beautiful group of letters, not a group of beautiful letters.
    </blockquote>
-   <img src="img/matthew-carter.jpeg" width="200" alt="[image of Matthew Carter">
+   <img src="img/matthew-carter.jpg" width="200" alt="[image of Matthew Carter">
    <h3> — Neville Brody </h3>
    <blockquote cite= "http://www.azquotes.com/author/40514-Neville_Brody">
    Design is more than just a few tricks to the eye. It's a few tricks to the brain.
    </blockquote>
-   <img src="img/neville-brody.jpeg" width="200" alt="[image of Neville Brody">
+   <img src="img/neville-brody.jpg" width="200" alt="[image of Neville Brody">
    <h3> — Jan Tschichold </h3>
    <blockquote cite= "http://www.azquotes.com/author/40524-Jan_Tschichold">
    The aim of every typographic work - the delivery of a message in the shortest, most efficient manner.
    </blockquote>
-   <img src="img/jan-tschichold.jpeg" width="200" alt="[image of Jan Tschichold">
+   <img src="img/jan-tschichold.jpg" width="200" alt="[image of Jan Tschichold">
    <h2> Designers</h2>
    <h3> — David Carson </h3>
    <blockquote cite= "https://www.brainyquote.com/authors/david_carson">
    Overall, people are reading less.
    </blockquote>
-   <img src="img/david-carson.jpeg" width="200" alt="[image of David Carson">
+   <img src="img/david-carson.jpg" width="200" alt="[image of David Carson">
    <h2> Art</h2>
    <h3> — Jean-Michel Basquiat</h3>
    <blockquote cite= "https://www.brainyquote.com/authors/jeanmichel_basquiat">
       I'm not a real person. I'm a legend.
    </blockquote>
-   <img src="img/jean-michel-basquiat.jpeg" width="200" alt="[image of Jeanmichel Basquiat">
+   <img src="img/jean-michel-basquiat.jpg" width="200" alt="[image of Jeanmichel Basquiat">
 </body>
 </html>
