updated images and image links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="utf-8">
-   <title></title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>Document</title>
+
 </head>
 <body>
-   <div id="container"></div>
+   <h1>Art</h1>
+      <h2> Fine art</h2>
+         <h3> Artists </h3>
+         <img src="dali.jpg"height="500">
+         <h4>Salvador Dalí  <br> <br>
+
+         “I don't do drugs. I am drugs.” <br> <br>
+         </h4>
+         <img src="frida-kahlo.jpg"height="500"> <br>
+         <h4>
+         Frida Kahlo <br> <br>
+
+
+         “I tried to drown my sorrows, but the bastards learned how to swim, and now I am overwhelmed by this decent and good feeling.” <br> <br><br> <br>
+
+
+               <img src="jean-michel-basquiat.jpg"height="500">
+         <h4>Jean-Michel Basquiat <br><br> "Believe it or not, I can actually draw.""
+         </h4>
+
+   <h2> Design</h2>
+      <h3>Designers</h3>
+         <img src="david-carson.jpg"height="500">
+         <h4>David Carson
+         </h4>
+
+
+            <img src="susan-kare.jpg"height="500">
+            <h4>Susan Kare</h4> <br> ...welding a life-size razorback hog... <br> </h4>
+      <h2> Typography</h2>
+         <h3>Typographers</h3>
+            <img src="matthew-carter.jpg"height="500">
+            <h4>Matthew Carter</h4>
+            <img src="jan-tschichold.jpg"height="500">
+            <h4>Jan Tschichold</h4>
+            <img src="neville-brody.jpg"height="500">
+            <h4>Neville Brody</h4>
+   <h2>Engineering</h2>
+      <h3>Engineers</h3>
+      <img src="linus-torvalds.jpg"height="500">
+         <h4> Linus Torvalds</h4>
+         <img src="tim-berners-lee.jpg"height="500">
+         <h4>Tim Berners-Lee</h4>
+         <img src="håkon-wium-lie.jpg"height="500">
+         <h4>Håkon Wium Lie</h4>
+
+
+
+
+
 </body>
 </html>
