--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
    <h1>Art</h1>
       <h2> Fine art</h2>
          <h3> Artists </h3>
-         <img src="dali.jpg"height="500">
+         <img src="img/dali.jpg"height="500">
          <h4>Salvador Dalí  <br> <br>
 
          “I don't do drugs. I am drugs.” <br> <br>
          </h4>
-         <img src="frida-kahlo.jpg"height="500"> <br>
+         <img src="img/frida-kahlo.jpg"height="500"> <br>
          <h4>
          Frida Kahlo <br> <br>
 
@@ -24,34 +24,34 @@
          “I tried to drown my sorrows, but the bastards learned how to swim, and now I am overwhelmed by this decent and good feeling.” <br> <br><br> <br>
 
 
-               <img src="jean-michel-basquiat.jpg"height="500">
+               <img src="img/jean-michel-basquiat.jpg"height="500">
          <h4>Jean-Michel Basquiat <br><br> "Believe it or not, I can actually draw.""
          </h4>
 
    <h2> Design</h2>
       <h3>Designers</h3>
-         <img src="david-carson.jpg"height="500">
+         <img src="img/david-carson.jpg"height="500">
          <h4>David Carson
          </h4>
 
 
-            <img src="susan-kare.jpg"height="500">
+            <img src="img/susan-kare.jpg"height="500">
             <h4>Susan Kare</h4> <br> ...welding a life-size razorback hog... <br> </h4>
       <h2> Typography</h2>
          <h3>Typographers</h3>
-            <img src="matthew-carter.jpg"height="500">
+            <img src="img/matthew-carter.jpg"height="500">
             <h4>Matthew Carter</h4>
-            <img src="jan-tschichold.jpg"height="500">
+            <img src="img/jan-tschichold.jpg"height="500">
             <h4>Jan Tschichold</h4>
-            <img src="neville-brody.jpg"height="500">
+            <img src="img/neville-brody.jpg"height="500">
             <h4>Neville Brody</h4>
    <h2>Engineering</h2>
       <h3>Engineers</h3>
-      <img src="linus-torvalds.jpg"height="500">
+      <img src="img/linus-torvalds.jpg"height="500">
          <h4> Linus Torvalds</h4>
-         <img src="tim-berners-lee.jpg"height="500">
+         <img src="img/tim-berners-lee.jpg"height="500">
          <h4>Tim Berners-Lee</h4>
-         <img src="håkon-wium-lie.jpg"height="500">
+         <img src="img/håkon-wium-lie.jpg"height="500">
          <h4>Håkon Wium Lie</h4>
 
 
