--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
       <h2> Fine art</h2>
          <h3> Artists </h3>
          <img src="img/dali.jpg"height="500">
-         <h4>Salvador Dalí  <br> <br>
+         <h4>Salvador Dalí  <br> <br></h4>
 
-         “I don't do drugs. I am drugs.” <br> <br>
-         </h4>
+         <p>“I don't do drugs. I am drugs.” </p> <br> <br>
+
          <img src="img/frida-kahlo.jpg"height="500"> <br>
          <h4>
          Frida Kahlo <br> <br>
+      </h4>
 
-
-         “I tried to drown my sorrows, but the bastards learned how to swim, and now I am overwhelmed by this decent and good feeling.” <br> <br><br> <br>
+         <p> “I tried to drown my sorrows, but the bastards learned how to swim, and now I am overwhelmed by this decent and good feeling.” </p> <br> <br><br> <br>
 
 
                <img src="img/jean-michel-basquiat.jpg"height="500">
-         <h4>Jean-Michel Basquiat <br><br> "Believe it or not, I can actually draw.""
+         <h4>Jean-Michel Basquiat <br><br>
          </h4>
-
+            <p>"Believe it or not, I can actually draw.""</p>
    <h2> Design</h2>
       <h3>Designers</h3>
          <img src="img/david-carson.jpg"height="500">
